[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctsd"
version = "0.1.0"
description = "Nonparametric conditional distribution estimation for time series snapshots."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ezequiel Fernando Boero Serra"}]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.scripts]
ctsd-check-npz = "ctsd.cli.check_npz_integrity:main"
ctsd-nw-multik-par = "ctsd.cli.nw_multik_parallel:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ctsd-check-npz = "ctsd.cli.check_npz_integrity:main"
ctsd-nw-multik-par = "ctsd.cli.nw_multik_parallel:main"
ctsd-plot-multik = "ctsd.cli.plot_multik:main"
ctsd-cdf-stats = "ctsd.cli.cdf_stats:main"
ctsd-cdf-features = "ctsd.cli.cdf_features:main"
ctsd-organize-by-ticker = "ctsd.cli.organize_by_ticker:main"

